# Bazel-learning-paths

./: .gitignore  README.md
getting-started-with-bazel/exercises/01-hello-world/: instructions.md
getting-started-with-bazel/exercises/01-hello-world/solution/: BUILD  solution.md
getting-started-with-bazel/exercises/01-hello-world/start/: BUILD  rule.bzl
getting-started-with-bazel/exercises/02-java-binary/: instructions.md
getting-started-with-bazel/exercises/02-java-binary/solution/: BUILD  solution.md
getting-started-with-bazel/exercises/02-java-binary/start/src/main/resources/: application.properties
getting-started-with-bazel/exercises/03-ide-support/: instructions.md
getting-started-with-bazel/exercises/03-ide-support/solution/: solution.md
getting-started-with-bazel/exercises/04-java-dependency/: instructions.md
getting-started-with-bazel/exercises/04-java-dependency/solution/: WORKSPACE  solution.md
getting-started-with-bazel/exercises/04-java-dependency/solution/src/main/resources/: BUILD
getting-started-with-bazel/exercises/05-java-test/: instructions.md
getting-started-with-bazel/exercises/05-java-test/solution/: WORKSPACE  solution.md
getting-started-with-bazel/exercises/05-java-test/start/: WORKSPACE
getting-started-with-bazel/exercises/05-java-test/start/src/main/resources/: BUILD
getting-started-with-bazel/exercises/06-continuous-integration/: instructions.md
getting-started-with-bazel/exercises/06-continuous-integration/solution/: solution.md
tutorials/go-code-tutorial/: .gitignore  BUILD.bazel  WORKSPACE  deps.bzl  go.mod  go.sum  main.go
tutorials/go-code-tutorial/cmd/: BUILD.bazel  roll.go  root.go  word.go
tutorials/go-code-tutorial/pkg/roll/: BUILD.bazel  roll_dice.go
tutorials/go-code-tutorial/pkg/word/: BUILD.bazel  generate_word.go  generate_word_test.go
(+11 files in other folders)
