load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/bazel-contrib/Bazel-learning-paths/tutorials/go-code-tutorial
gazelle(name = "gazelle")

# adding rule to update deps
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "bazel-go-example-code_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazel-contrib/Bazel-learning-paths/tutorials/go-code-tutorial",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "bazel-go-example-code",
    embed = [":bazel-go-example-code_lib"],
    visibility = ["//visibility:public"],
)
