load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "roll.go",
        "root.go",
        "word.go",
    ],
    importpath = "github.com/bazel-contrib/Bazel-learning-paths/tutorials/go-code-tutorial/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/roll",
        "//pkg/word",
        "@com_github_spf13_cobra//:cobra",
    ],
)
